# pointsman

./: .env.example  .gitignore  .gitmodules  .tool-versions  CLAUDE.md  Makefile  README.md
.claude/skills/adr/: SKILL.md
.claude/skills/adr-done/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: SECURITY.md  dependabot.yml
.github/workflows/: test.yml  vst-test.yml
Source/: PluginEditor.cpp  PluginProcessor.cpp
docs/: LICENSE
docs/ai/: concept.md  design.md  m4l-phase5-handoff.md  quantizer-test-vectors.json  rng-test-vectors.json  supply-chain.md  turing-test-vectors.json
docs/ai/adr/: 001-engine-interface.md  001-pointsman-base.md  002-m4l-architecture.md  002-pointsman-release.md  003-m4l-ui-design.md  003-pointsman-vst-architecture.md  004-m4l-bake-distribution.md  004-pointsman-arpeggiator.md  005-product-split.md  006-m4l-release-verification.md  INDEX.md
docs/ai/adr/archive/: 001-engine-interface.md  001-pointsman-base.md  002-m4l-architecture.md  002-pointsman-release.md  003-m4l-ui-design.md  003-pointsman-vst-architecture.md  004-m4l-bake-distribution.md
m4l/: Pointsman.amxd  Pointsman.maxpat  Stencil-QT.amxd  Stencil-QT.maxpat  Stencil-TM.amxd  Stencil-TM.maxpat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pointsman.entry.mjs  pointsman.mjs  registerRing.jsui.js  registerRing.subpatcher.maxpat  scaleKeyboard.jsui.js  separator.jsui.js  stencil-qt.mjs  stencil-tm.mjs
m4l/engine/: package.json  quantizer.test.ts  quantizer.ts  rng.test.ts  rng.ts  turing.test.ts  turing.ts
m4l/host/: bridge.test.ts  bridge.ts  host.test.ts  host.ts  humanize.test.ts  humanize.ts  maxpat-integration.test.ts  package.json  pointsman-bundle.test.ts  tsconfig.json
m4l/host-qt/: bridge.test.ts  bridge.ts  host.test.ts  host.ts  humanize.test.ts  humanize.ts  index.mjs  package.json  tsconfig.json
m4l/host-qt/ui/: scaleKeyboard.logic.test.ts  scaleKeyboard.logic.ts  scaleKeyboard.mirror.test.ts
m4l/host-tm/: bridge.test.ts  bridge.ts  host.test.ts  host.ts  index.mjs  package.json  tsconfig.json
m4l/host-tm/ui/: registerRing.jsui.js  registerRing.logic.test.ts  registerRing.logic.ts  registerRing.mirror.test.ts
m4l/host/ui/: scaleKeyboard.logic.test.ts  scaleKeyboard.logic.ts  scaleKeyboard.mirror.test.ts
m4l/scripts/: adr004-surgery.mjs  bake.test.mjs  maxpat-to-amxd.mjs  package.json  patcher.test.mjs  phase5-surgery.mjs
scripts/: gen-test-vectors.mjs
scripts/gen-test-vectors/: arp.mjs  chord.mjs  prng.mjs  scale.mjs
tests/: test_TuringMachine.cpp
vst/: CMakeLists.txt  LICENSE  Makefile
vst/Source/: PluginEditor.h  PluginProcessor.h
vst/Source/Editor/: ControlsView.cpp  ControlsView.h  NoteFormat.h  PluginEditor.cpp  PluginEditor.h  ScaleKeyboardView.cpp  ScaleKeyboardView.h  Theme.cpp  Theme.h
vst/Source/Engine/: Humanize.cpp  Humanize.h  Quantizer.cpp  Quantizer.h  Rng.h  State.h
vst/Source/Plugin/: Parameters.cpp  Parameters.h  PluginProcessor.cpp  PluginProcessor.h
vst/scripts/: INSTALL.txt  README.txt  build-dmg.sh  build-pkg.sh  check-artefacts.sh  codesign.sh  distribution.xml  notarize.sh
vst/scripts/pkg-resources/en.lproj/: conclusion.txt  license.txt  welcome.txt
vst/scripts/pkg-resources/ja.lproj/: conclusion.txt  license.txt  welcome.txt
vst/tests/: main.cpp  test_Editor.cpp  test_Humanize.cpp  test_NoteFormat.cpp  test_Plugin.cpp  test_Quantizer.cpp  test_Rng.cpp
